--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -191,4 +191,9 @@
   <string name="onboarding_turbo_mode_body">加速模式会自动拦截跟踪器与广告，访问网站更迅捷。若您发现网站无法正常工作，请退出加速模式。</string>
   <string name="onboarding_turbo_mode_button_on">保持加速模式启用</string>
   <string name="onboarding_turbo_mode_button_off">退出加速模式</string>
+  <string name="homescreen_tile_remove">移除</string>
+  <string name="nav_close_hint">关闭</string>
+  <string name="pin_label">固定到主屏幕</string>
+  <string name="notification_pinned_site">已固定到 Firefox TV 主屏幕</string>
+  <string name="notification_unpinned_site">已从 Firefox TV 主屏幕移除</string>
 </resources>
